<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Geek forecast</string>

    <!-- Welcome screen -->
    <string name="welcome_label">Welcome</string>
    <string name="welcome_city_label">Choose your city:</string>
    <string name="welcome_agreements">By tap on button, I agree with the service rules</string>
    <string name="welcome_continue">View a forecast</string>
    <string name="details_button_send">Send</string>
    <string name="share_title">My secret forecast!</string>
    <string name="atmosphere_pressure">Pressure</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next week</string>
    <string name="week_forecast_placeholder">A forecast for whole week. Please, don\'t trust to this forecast!</string>
    <string name="tomorrow_forecast_placeholder">A forecast for tomorrow.</string>
    <string name="atmosphere_preassure_placeholder">Some atmosphere pressure description, which received from server</string>
    <array name="cities">
        <item>Moscow</item>
        <item>St. Petersburg</item>
        <item>Nizhny Novgorod</item>
        <item>Kazan</item>
        <item>Ekaterinburg</item>
        <item>Krasnoyarsk</item>
        <item>Khabarovsk</item>
        <item>Vladivostok</item>
    </array>
    <array name="forecast_values">
        <item>Sunny</item>
        <item>Cloudy</item>
        <item>Windy</item>
        <item>Snowy</item>
        <item>Rainy</item>
        <item>Frosty</item>
        <item>Cold</item>
        <item>Hot</item>
    </array>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="manu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_settings">Settings</string>
    <string name="add_new_city_title">Set new location</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>


</resources>
