<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.gb.vtitov.weather.WelcomeFragment">
    <TextView
        android:id="@+id/choose_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:gravity="left"
        android:text="@string/welcome_city_label"
        android:textStyle="bold"
        android:textSize="@dimen/bold_label_size" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/cities_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@color/lightGray"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/default_margin"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/chBox_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/medium_margin"
            android:text="@string/atmosphere_pressure"/>
        <CheckBox
            android:id="@+id/chBox_tomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/medium_margin"
            android:text="@string/tomorrow"/>
        <CheckBox
            android:id="@+id/chBox_next_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/medium_margin"
            android:text="@string/next_week"/>
    </LinearLayout>
    <TextView
        android:id="@+id/agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_agreements"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_standard"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/big_margin"
        android:layout_marginRight="@dimen/big_margin"/>

</LinearLayout>
